--- a/entrypoint/pom.xml
+++ b/entrypoint/pom.xml
@@ -10,7 +10,6 @@
 	<name>entrypoint</name>
 	<url>http://maven.apache.org</url>
 
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -62,6 +61,11 @@
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudbus.mcweb</groupId>
+			<artifactId>mcweblib</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<!-- Test Dependency -->
 		<dependency>
@@ -116,7 +120,7 @@
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
-										<Main-Class>org.cloudbus.mcweb.Main</Main-Class>
+										<Main-Class>org.cloudbus.mcweb.entrypoint.Main</Main-Class>
 									</manifestEntries>
 								</transformer>
 							</transformers>
