--- a/admissioncontroller/pom.xml
+++ b/admissioncontroller/pom.xml
@@ -10,8 +10,6 @@
 	<name>admissioncontroller</name>
 	<url>http://maven.apache.org</url>
 
-
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -63,6 +61,16 @@
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudbus.mcweb</groupId>
+			<artifactId>mcweblib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
 		</dependency>
 		<!-- Test Dependency -->
 		<dependency>
