--- a/entrypoint/pom.xml
+++ b/entrypoint/pom.xml
@@ -67,6 +67,11 @@
 			<artifactId>mcweblib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 		<!-- Test Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
