--- a/mcweblib/pom.xml
+++ b/mcweblib/pom.xml
@@ -45,6 +45,11 @@
 			<artifactId>opencsv</artifactId>
 			<version>2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 		<!-- Test Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
