--- a/entrypoint/src/main/resources/cloudsites.properties
+++ b/entrypoint/src/main/resources/cloudsites.properties
@@ -1,5 +1,2 @@
 Name;	AdmissionControllerAddress;	LoadBalancerAddress
-AWS1;	5.149.168.0;				5.149.168.0:80/index.html
-AWS2;	74.221.217.130;				74.221.217.130:80/index.html
-AWS3;	80.222.136.0;				80.222.136.0:80/index.html
-AWS4;	74.125.126.0;				74.125.126.0:80/index.html
+Local;	http://localhost:8081;				5.149.168.0:80/index.html
