Started migration of FANN code to a Java wrapper.

--- a/dccontroller/pom.xml
+++ b/dccontroller/pom.xml
@@ -16,6 +16,11 @@
 	</properties>
 
 	<dependencies>
+	    <dependency>
+        	<groupId>com.googlecode.fannj</groupId>
+        	<artifactId>fannj</artifactId>
+        	<version>0.6</version>
+    	</dependency>
 		<!-- Jetty, Jersey dependencies -->
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
