--- a/acrules/pom.xml
+++ b/acrules/pom.xml
@@ -25,7 +25,11 @@
 			<artifactId>drools-core</artifactId>
 			<version>${droolsVersion}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
