--- a/acrules/pom.xml
+++ b/acrules/pom.xml
@@ -16,6 +16,12 @@
 	<!-- Required dependencies -->
 	<dependencies>
 		<dependency>
+			<groupId>org.cloudbus.mcweb</groupId>
+			<artifactId>mcweblib</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+	
+		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
 			<version>${droolsVersion}</version>
