--- a/admissioncontroller/pom.xml
+++ b/admissioncontroller/pom.xml
@@ -68,6 +68,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.cloudbus.mcweb</groupId>
+			<artifactId>acrules</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
