Completed the failure handling of the entry points.

--- a/entrypoint/src/main/resources/cloudsites.properties
+++ b/entrypoint/src/main/resources/cloudsites.properties
@@ -1,2 +1,2 @@
-Name;	AdmissionControllerAddress;	LoadBalancerAddress
-Local;	http://localhost:8081;				5.149.168.0:80/index.html
+Name;	AdmissionControllerAddress;		LoadBalancerAddress; 				ConnectionTimeOutMillis; 	ReconnectionTimeInMilles
+Local;	http://localhost:8081;			5.149.168.0:80/index.html;			3000; 						10000
