--- a/experimentclient/pom.xml
+++ b/experimentclient/pom.xml
@@ -49,6 +49,11 @@
 		<!-- Logical Dependency -->
 		<dependency>
 			<groupId>org.cloudbus.mcweb</groupId>
+			<artifactId>admissioncontroller</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cloudbus.mcweb</groupId>
 			<artifactId>mcweblib</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
