--- a/mcweblib/pom.xml
+++ b/mcweblib/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 		<!-- Test Dependency -->
 		<dependency>
 			<groupId>junit</groupId>
